[gd_scene load_steps=23 format=2]

[ext_resource path="res://src/Objects/UI.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Objects/Point.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Scripts/World.gd" type="Script" id=3]
[ext_resource path="res://src/Objects/PlotLine.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://LineRenderer/LineRenderer.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Materials/3DIndexMaterialRed.tres" type="Material" id=7]
[ext_resource path="res://src/Materials/3DIndexMaterialBlue.tres" type="Material" id=8]
[ext_resource path="res://src/Materials/3DIndexMaterialGreen.tres" type="Material" id=9]
[ext_resource path="res://src/Textures/ZSprite.png" type="Texture" id=10]
[ext_resource path="res://src/Textures/YSprite.png" type="Texture" id=11]
[ext_resource path="res://src/Textures/XSprite.png" type="Texture" id=12]
[ext_resource path="res://src/Scripts/Marks.gd" type="Script" id=13]
[ext_resource path="res://src/Objects/MarkLines.tscn" type="PackedScene" id=14]

[sub_resource type="ProceduralSky" id=1]
sky_top_color = Color( 0.996078, 0.996078, 0.996078, 1 )
ground_horizon_color = Color( 0.588235, 0.588235, 0.588235, 1 )

[sub_resource type="Environment" id=2]
background_mode = 1
background_sky = SubResource( 1 )
background_color = Color( 0.419608, 0.458824, 0.470588, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 2
albedo_color = Color( 0, 0, 0, 0.215686 )

[sub_resource type="PlaneMesh" id=4]
material = SubResource( 3 )
size = Vector2( 150, 150 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0, 1, 0.0392157, 1 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0, 0.0392157, 1, 1 )

[sub_resource type="CubeMesh" id=8]

[node name="World" type="Spatial"]
script = ExtResource( 3 )
markSpacing = 1.0

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, -4.37114e-08, 5.96046e-08, 8.05287e-09, 0.866025, 0.5, -7.34748e-08, -0.5, 0.866025, 8, 8, 10 )
environment = SubResource( 2 )
current = true
fov = 75.0
size = 10.0
near = 0.01
far = 5000.0
script = ExtResource( 5 )
speed = 10.0

[node name="Marks" type="Node" parent="."]
script = ExtResource( 13 )

[node name="MarkLines" parent="Marks" instance=ExtResource( 14 )]

[node name="PlotLine" parent="." instance=ExtResource( 4 )]

[node name="UI" parent="." instance=ExtResource( 1 )]

[node name="Point" parent="." instance=ExtResource( 2 )]
radius = 0.06

[node name="Plane" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = null

[node name="Axes" type="Node" parent="."]

[node name="AxisX" parent="Axes" instance=ExtResource( 6 )]
material_override = SubResource( 5 )
cast_shadow = 0

[node name="AxisY" parent="Axes" instance=ExtResource( 6 )]
material_override = SubResource( 6 )
cast_shadow = 0

[node name="AxisZ" parent="Axes" instance=ExtResource( 6 )]
material_override = SubResource( 7 )
cast_shadow = 0

[node name="Positions" type="Node" parent="."]

[node name="PositionXY" type="Position3D" parent="Positions"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 10, 0 )

[node name="PositionYZ" type="Position3D" parent="Positions"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 10, 0, 0 )

[node name="PositionXZ" type="Position3D" parent="Positions"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )

[node name="XIndex" type="Spatial" parent="."]
transform = Transform( 0.864, 0, 0, 0, 1.12, 0, 0, 0, 1.12, 35, 1, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="XIndex"]
transform = Transform( 0.2, 0, 0, 0, 0.866025, -0.1, 0, 0.5, 0.173205, 0, 0, 0 )
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 7 )

[node name="MeshInstance2" type="MeshInstance" parent="XIndex"]
transform = Transform( 0.2, 0, 0, 0, 0.866025, 0.1, 0, -0.5, 0.173205, 0, 0, 0 )
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 7 )

[node name="Sprite3D" type="Sprite3D" parent="XIndex"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
billboard = 2
alpha_cut = 2
texture = ExtResource( 12 )

[node name="YIndex" type="Spatial" parent="."]
transform = Transform( -1.85729e-07, 0, 1.14, 0, 1.14, 0, -0.855, 0, -1.39297e-07, 0, 1, -35 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance" type="MeshInstance" parent="YIndex"]
transform = Transform( 0.2, 4.07302e-08, 3.55271e-15, 7.05467e-09, 0.433013, -0.1, 4.07302e-09, 0.25, 0.173205, 0, 0.466122, 0.231283 )
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 9 )

[node name="MeshInstance2" type="MeshInstance" parent="YIndex"]
transform = Transform( 0.2, 0, 0, 0, 0.866025, 0.1, 0, -0.5, 0.173205, 0, 0, 0 )
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 9 )

[node name="Sprite3D" type="Sprite3D" parent="YIndex"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
billboard = 2
alpha_cut = 2
texture = ExtResource( 11 )

[node name="ZIndex" type="Spatial" parent="."]
transform = Transform( -0.7, 0, -2.28089e-07, 0, 0.7, 0, 2.28089e-07, 0, -0.7, 0, 35, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance2" type="MeshInstance" parent="ZIndex"]
transform = Transform( 0.2, 1.41741e-07, -3.95062e-08, 4.79717e-09, 1.61947, 0.17, -4.83874e-08, -0.935, 0.294449, 0, 0.192677, -0.0140791 )
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 8 )

[node name="MeshInstance3" type="MeshInstance" parent="ZIndex"]
transform = Transform( 0.2, 2.93922e-07, 3.18516e-15, -1.80493e-14, 1.9218e-07, -0.339998, -2.6719e-07, 1.17959, 5.53927e-08, -5.96046e-08, 1.62454, 0.1525 )
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 8 )

[node name="MeshInstance4" type="MeshInstance" parent="ZIndex"]
transform = Transform( 0.2, 2.93922e-07, 3.18516e-15, -1.80493e-14, 1.9218e-07, -0.339998, -2.6719e-07, 1.17959, 5.53927e-08, 3.55271e-15, -1.26034, -0.112274 )
visible = false
mesh = SubResource( 8 )
material/0 = ExtResource( 8 )

[node name="Sprite3D" type="Sprite3D" parent="ZIndex"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
billboard = 2
alpha_cut = 2
texture = ExtResource( 10 )
[connection signal="text_changed" from="UI/UIPanel/XLabel/LineEditX" to="." method="_on_LineEditX_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/YLabel/LineEditY" to="." method="_on_LineEditY_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/ZLabel/LineEditZ" to="." method="_on_LineEditZ_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/ScaleXLabel/ScaleEditX" to="." method="_on_ScaleEditX_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/ScaleYLabel/ScaleEditY" to="." method="_on_ScaleEditY_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/ScaleZLabel/ScaleEditZ" to="." method="_on_ScaleEditZ_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/NumberOfSubLines/NumberOfSublinesEdit" to="." method="_on_NumberOfSublinesEdit_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/LeftPlotLimit/LeftLimitEdit" to="." method="_on_LeftLimitEdit_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/RightPlotLimit/RightLimitEdit" to="." method="_on_RightLimitEdit_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/PointRaduis/PointRadiusEdit" to="." method="_on_PointRadiusEdit_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/LeftTLimit/LeftTLimitEdit" to="." method="_on_LeftTLimitEdit_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/RightTLimit/RightTLimitEdit" to="." method="_on_RightTLimitEdit_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/tIncrement/tIncrementEdit" to="." method="_on_tIncrementEdit_text_changed"]
[connection signal="text_changed" from="UI/UIPanel/LineWidth/LineWidthEdit" to="." method="_on_LineWidthEdit_text_changed"]
[connection signal="color_changed" from="UI/UIPanel/LineColor/LineColorPickerButton" to="." method="_on_LineColorPickerButton_color_changed"]
[connection signal="color_changed" from="UI/UIPanel/PointColor/PointColorPickerButton" to="Point" method="_on_PointColorPickerButton_color_changed"]
[connection signal="color_changed" from="UI/UIPanel/BackgroungColor/BackgroungColorPick" to="." method="_on_BackgroungColorPick_color_changed"]
[connection signal="button_up" from="UI/UIPanel/AnimateButton" to="." method="_on_AnimateButton_button_up"]
[connection signal="pressed" from="UI/UIPanel/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="UI/UIPanel/DrawPlotLineButton" to="." method="_on_DrawPlotLineButton_pressed"]
[connection signal="pressed" from="UI/UIPanel/DeletePlotLineButton" to="." method="_on_DeletePlotLineButton_pressed"]
[connection signal="toggled" from="UI/UIPanel/AntiAliasingButton" to="PlotLine" method="_on_AntiAliasingButton_toggled"]
[connection signal="toggled" from="UI/UIPanel/GrayScaleButton" to="." method="_on_GrayScaleButton_toggled"]

[editable path="PlotLine"]

[editable path="UI"]

[editable path="Point"]
